--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 buildscript {
     ext {
-        springBootVersion = '1.2.7.RELEASE'
+        springBootVersion = '1.4.1.RELEASE'
     }
     repositories {
         mavenCentral()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") 
-        classpath('io.spring.gradle:dependency-management-plugin:0.5.2.RELEASE')
+        classpath('io.spring.gradle:dependency-management-plugin:0.6.0.RELEASE')
     }
 }
 
@@ -16,6 +16,7 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'spring-boot' 
 apply plugin: 'io.spring.dependency-management' 
+apply plugin: "groovy"
 
 jar {
     baseName = 'homework'
@@ -28,20 +29,58 @@ repositories {
     mavenCentral()
 }
 
-
-dependencies {
-    compile('org.springframework.boot:spring-boot-starter')
-    testCompile('org.springframework.boot:spring-boot-starter-test') 
+configurations.all {
+    all*.exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+    all*.exclude group: 'org.slf4j', module: 'slf4j-simple'
+    all*.exclude group: 'log4j', module: 'log4j'
 }
 
 
-eclipse {
-    classpath {
-         containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
-         containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
+dependencies {
+  compile "org.springframework.boot:spring-boot-starter-web"
+  compile "org.codehaus.groovy:groovy-all:2.4.1"
+  compile  'org.hibernate:hibernate-core:4.3.6.Final'
+  compile  'org.hibernate:hibernate-entitymanager:4.3.2.Final'
+  compile "org.springframework:spring-tx:4.3.3.RELEASE"
+  compile 'org.springframework:spring-jdbc:4.1.0.RELEASE'
+  compile 'org.springframework:spring-orm:4.3.3.RELEASE'
+  compile "org.hsqldb:hsqldb:2.0.0"
+  compile group: 'com.google.guava', name: 'guava', version: '19.0'
+  compile group: 'commons-codec', name: 'commons-codec', version: '1.9'
+  
+  compile 'ch.qos.logback:logback-core:1.1.7'
+  compile 'ch.qos.logback:logback-classic:1.1.7'
+  
+  compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.7.0")
+   
+  compile 'org.slf4j:jcl-over-slf4j:1.7.5'
+  compile 'org.slf4j:log4j-over-slf4j:1.7.5'
+  compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+  
+  testCompile "org.spockframework:spock-core:1.0-groovy-2.4"
+
+  testCompile "org.hamcrest:hamcrest-core:1.3" 
+  testCompile('org.springframework.boot:spring-boot-starter-test') 
+  testCompile group: 'cglib', name: 'cglib-nodep', version: '3.2.4'
+  testCompile 'junit:junit:4.12'
+}
+
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '3.1'
+}
+
+project.ext {
+    counter = 0
+}
+
+test {
+    afterTest { desc, result -> 
+        println "Executing test ${desc.name} [${desc.className}] with result: ${result.resultType}"
+		project.counter++
     }
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '2.7'
+test.doLast {
+	println "Totally ${project.counter} test were executed"
 }
