--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,5 @@ entitymanager.packagesToScan: io.fourfinanceit.domain
 
 #application
 loan.max.amount=500
-loan.interest.month=30
-loan.extension.month=6
+loan.interest.month=2.5
+loan.extension.interest.month=6
